# upstage-silverforge-agent

./: .env.example  .gitignore  README.ko.md  README.md  example.py  example_curate.py  main.py  pyproject.toml  requirements.txt  run_ui.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
docs/: NOTION_PROJECT_INTRO.md  PLAN_agent_refactoring.md
scripts/: download_arxiv.py
silverforge/: __init__.py  api.py  app.py  core.py  curator.py
src/silverforge/: __init__.py  api.py  app.py  core.py  curator.py  database.py
supabase/: schema.sql
